fix: feature-area spacing fix on xl

--- a/css/style.css
+++ b/css/style.css
@@ -10920,7 +10920,7 @@ ul.children {
 }
 @media only screen and (min-width: 1200px) and (max-width: 1399px) {
   .service-area-wrapper {
-    margin-top: 0;
+    margin-top: 0 !important;
   }
 }
 .service-area-wrapper .slider-area {
