--- a/sass/modules/service-card/_service-card.scss
+++ b/sass/modules/service-card/_service-card.scss
@@ -192,7 +192,7 @@
 .service-area-wrapper{
     z-index: unset !important;
     @include xl{
-        margin-top: 0;
+        margin-top: 0 !important;
     }
     .slider-area{
         z-index: 10;
